# dicom-dataset-editor

./: .clang-format  .clang-tidy  .conanrc  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md  conanconfig.yml  conanfile.py  iwyu.imp  liver.dcm
benchmarks/: DicomEditorBenchmarks.cpp
cmake/: CompilerWarnings.cmake  DeveloperMode.cmake  EmbeddedDictionary.cpp.in  Prelude.cmake
include/dicom_editor/: AttributeInput.hpp  DatasetViewModel.hpp  DicomDocument.hpp  DicomEditorService.hpp  DicomError.hpp  DicomNode.hpp  DicomPath.hpp  DicomWorkspace.hpp  EditorController.hpp  RuntimePaths.hpp
include/dicom_editor/application/: EditorController.hpp
include/dicom_editor/core/: AttributeInput.hpp  DatasetViewModel.hpp  DicomDictionary.hpp  DicomDocument.hpp  DicomEditorService.hpp  DicomNode.hpp  DicomPath.hpp  DicomWorkspace.hpp
resources/: fonts.conf
scripts/: Invoke-DeveloperWorkflow.ps1
src/application/: EditorController.cpp
src/core/: AttributeInput.cpp  DatasetViewModel.cpp  DicomDictionary.cpp  DicomDocument.cpp  DicomEditorService.cpp  DicomNode.cpp  DicomPath.cpp  DicomWorkspace.cpp  EditorController.cpp  EmbeddedDictionary.hpp
src/fltk/: App.cpp  AttributeEditDialog.cpp  AttributeEditDialog.hpp  DatasetTreePanel.cpp  DatasetTreePanel.hpp  MainFrame.cpp  MainFrame.hpp
src/gui/: App.cpp  AttributeEditDialog.cpp  AttributeEditDialog.hpp  DatasetTreePanel.cpp  DatasetTreePanel.hpp  MainFrame.cpp  MainFrame.hpp
src/gui/fltk/: App.cpp  AttributeDialog.cpp  AttributeDialog.hpp  DatasetPanel.cpp  DatasetPanel.hpp  EditorWindow.cpp  EditorWindow.hpp  EditorWindowDialogs.cpp  FileTreePanel.cpp  FileTreePanel.hpp  PixelDataPanel.cpp  PixelDataPanel.hpp
src/ui/: App.cpp  AttributeDialog.cpp  AttributeDialog.hpp  DatasetPanel.cpp  DatasetPanel.hpp  EditorWindow.cpp  EditorWindow.hpp  FileTreePanel.cpp  FileTreePanel.hpp  PixelDataPanel.cpp  PixelDataPanel.hpp
tests/: CMakeLists.txt  DicomEditorTests.cpp  GuiSmokeTest.cpp
